trubleshoot text overflow issue
when text too much,,, inline block was overflowed and flooding mother block
and,,, i sove the problem!
with css overflow:invidible!

--- a/selfclone/style.css
+++ b/selfclone/style.css
@@ -57,7 +57,17 @@ div {
   flex-grow: 1;
 }
 .chat-name {
-  display: inline-flex;
+  /* max-height: 21px; */
+  /* max-width: max-content; */
+  flex-grow: 0;
+  flex-wrap: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.chat-thumbnail {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  /* white-space: nowrap; */
 }
 .chat-leftside {
   display: flex;
